app launcher icon and text

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
     google_fonts: ^5.1.0
+    flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: false
+    image_path: "assets/images/quiz-logo_launcher.png"
+    min_sdk_android: 16 # android min sdk min:16, default 21
+    adaptive_icon_background: "#000000"
+    adaptive_icon_foreground: "assets/images/quiz-logo_launcher.png"
 
 dev_dependencies:
     flutter_test:
@@ -59,7 +68,7 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
     assets:
-      - assets/images/quiz-logo.png
+        - assets/images/quiz-logo.png
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
